--- a/verteiltes_yolov3/gui.ui
+++ b/verteiltes_yolov3/gui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1758</width>
-    <height>1766</height>
+    <width>825</width>
+    <height>1051</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -109,7 +109,33 @@
              </spacer>
             </item>
             <item>
+             <widget class="QPushButton" name="pushButtonStartDetection">
+              <property name="text">
+               <string>Start Detection</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer_4">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+            <item>
              <widget class="QLabel" name="label">
+              <property name="baseSize">
+               <size>
+                <width>200</width>
+                <height>0</height>
+               </size>
+              </property>
               <property name="text">
                <string>TextLabel</string>
               </property>
@@ -170,8 +196,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1758</width>
-     <height>22</height>
+     <width>825</width>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuDatei">
