--- a/verteiltes_yolov3/gui.ui
+++ b/verteiltes_yolov3/gui.ui
@@ -73,14 +73,24 @@
             <item>
              <layout class="QHBoxLayout" name="horizontalLayout">
               <item>
-               <widget class="QPushButton" name="pushButton">
+               <widget class="QPushButton" name="pushButton_detectVideo">
+                <property name="font">
+                 <font>
+                  <pointsize>8</pointsize>
+                 </font>
+                </property>
                 <property name="text">
-                 <string>Play</string>
+                 <string>Detect Video</string>
                 </property>
                </widget>
               </item>
               <item>
                <widget class="QPushButton" name="pushButton_2">
+                <property name="font">
+                 <font>
+                  <pointsize>8</pointsize>
+                 </font>
+                </property>
                 <property name="text">
                  <string>Pause</string>
                 </property>
@@ -88,6 +98,11 @@
               </item>
               <item>
                <widget class="QPushButton" name="pushButton_3">
+                <property name="font">
+                 <font>
+                  <pointsize>8</pointsize>
+                 </font>
+                </property>
                 <property name="text">
                  <string>Stop</string>
                 </property>
@@ -110,34 +125,13 @@
             </item>
             <item>
              <widget class="QPushButton" name="pushButtonStartDetection">
-              <property name="text">
-               <string>Start Detection</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="horizontalSpacer_4">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-            <item>
-             <widget class="QLabel" name="label">
-              <property name="baseSize">
-               <size>
-                <width>200</width>
-                <height>0</height>
-               </size>
+              <property name="font">
+               <font>
+                <pointsize>8</pointsize>
+               </font>
               </property>
               <property name="text">
-               <string>TextLabel</string>
+               <string>Detect Image</string>
               </property>
              </widget>
             </item>
@@ -146,8 +140,13 @@
               <property name="enabled">
                <bool>true</bool>
               </property>
+              <property name="font">
+               <font>
+                <pointsize>8</pointsize>
+               </font>
+              </property>
               <property name="text">
-               <string>Refresh</string>
+               <string>Clear</string>
               </property>
              </widget>
             </item>
@@ -227,8 +226,7 @@
     <addaction name="actionload_image_512_pix"/>
     <addaction name="separator"/>
     <addaction name="actionload_video_parallel"/>
-    <addaction name="actionload_video_seriell"/>
-    <addaction name="actionload_video_seriell_yolo_tiny"/>
+    <addaction name="actionload_video_serial"/>
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
@@ -288,9 +286,9 @@
     <string>load video seriell</string>
    </property>
   </action>
-  <action name="actionload_video_seriell_yolo_tiny">
+  <action name="actionload_video_serial">
    <property name="text">
-    <string>load video seriell yolov4_tiny</string>
+    <string>load video serial</string>
    </property>
   </action>
   <action name="actionload_HXC40">
