--- a/verteiltes_yolov3/gui.ui
+++ b/verteiltes_yolov3/gui.ui
@@ -86,6 +86,9 @@
               </item>
               <item>
                <widget class="QPushButton" name="pushButton_2">
+                <property name="enabled">
+                 <bool>false</bool>
+                </property>
                 <property name="font">
                  <font>
                   <pointsize>8</pointsize>
@@ -97,7 +100,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QPushButton" name="pushButton_3">
+               <widget class="QPushButton" name="pushButton_stop">
                 <property name="font">
                  <font>
                   <pointsize>8</pointsize>
@@ -105,6 +108,9 @@
                 </property>
                 <property name="text">
                  <string>Stop</string>
+                </property>
+                <property name="checkable">
+                 <bool>true</bool>
                 </property>
                </widget>
               </item>
@@ -124,7 +130,7 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="pushButtonStartDetection">
+             <widget class="QPushButton" name="pushButton_detectImage">
               <property name="font">
                <font>
                 <pointsize>8</pointsize>
@@ -136,7 +142,7 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="refresh_button">
+             <widget class="QPushButton" name="pushButton_clear">
               <property name="enabled">
                <bool>true</bool>
               </property>
@@ -267,7 +273,7 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>load image</string>
+    <string>load image 2048 pix</string>
    </property>
   </action>
   <action name="actionload_video_parallel">
