--- a/verteiltes_yolov3/guiNew.ui
+++ b/verteiltes_yolov3/guiNew.ui
@@ -801,8 +801,8 @@
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>803</width>
-              <height>717</height>
+              <width>109</width>
+              <height>715</height>
              </rect>
             </property>
             <property name="maximumSize">
@@ -879,8 +879,13 @@
      <x>0</x>
      <y>0</y>
      <width>1450</width>
-     <height>21</height>
+     <height>23</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+    </font>
    </property>
    <widget class="QMenu" name="menuDatei">
     <property name="title">
